How is #cf5f00 on .active nav links @damsleth?

--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -1,81 +1,77 @@
 .root {
-    width: 100%;
-    height: 55px;
-    background: #343a40;
+  width: 100%;
+  height: 55px;
+  background: #343a40;
 
-    .container {
-        max-width: 1440px;
-        margin: auto;
-        display: flex;
-        height: 100%;
+  .container {
+    max-width: 1440px;
+    margin: auto;
+    display: flex;
+    height: 100%;
 
-        @media (min-width: 576px) {
-            max-width: 540px;
-        }
-
-        @media (min-width: 768px) {
-            max-width: 720px;
-
-        }
-
-        @media (min-width: 992px) {
-
-            max-width: 960px;
-
-        }
-
-        @media (min-width: 1200px) {
-
-            max-width: 1140px;
-
-        }
-
-        .hamburger {
-            color: #fff;
-            display: none;
-
-            .icon {
-                background: green;
-            }
-        }
-
-        .nav {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-            width: 500px;
-            padding-left: 0;
-
-            .navItem {
-                color: red;
-                display: flex;
-                align-items: center;
-                height: 100%;
-
-                .navLink {
-                    display: flex;
-                    color: #fff;
-                    font-weight: 500;
-                    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-                    font-size: 14px;
-                    text-decoration: none;
-
-                    &:hover,
-                    &.active {
-                        color: #bbb;
-                    }
-                }
-            }
-        }
-
-        .logo {
-            align-self: center;
-
-            img {
-                height: 37px;
-                margin-top: 5px;
-            }
-        }
+    @media (min-width: 576px) {
+      max-width: 540px;
     }
 
+    @media (min-width: 768px) {
+      max-width: 720px;
+    }
+
+    @media (min-width: 992px) {
+      max-width: 960px;
+    }
+
+    @media (min-width: 1200px) {
+      max-width: 1140px;
+    }
+
+    .hamburger {
+      color: #fff;
+      display: none;
+
+      .icon {
+        background: green;
+      }
+    }
+
+    .nav {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 500px;
+      padding-left: 0;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
+        Segoe UI Emoji;
+
+      .navItem {
+        display: flex;
+        align-items: center;
+        height: 100%;
+
+        .navLink {
+          display: flex;
+          color: #fff;
+          font-weight: 500;
+          font-size: 14px;
+          text-decoration: none;
+
+          &:hover {
+            color: #bbb;
+          }
+          &.active {
+            color: #cf5f00;
+          }
+        }
+      }
+    }
+
+    .logo {
+      align-self: center;
+
+      img {
+        height: 37px;
+        margin-top: 5px;
+      }
+    }
+  }
 }
