--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -63,7 +63,7 @@
         &:focus {
           color: #fff;
           text-decoration: none;
-          background-color: #CF5F00;
+          background-color: #cf5f00;
           outline: none;
         }
       }
