--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -5,6 +5,7 @@
 
   .container {
     display: flex;
+    justify-content: flex-end;
 
     .toggle {
       display: flex;
@@ -25,7 +26,7 @@
       box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
       position: relative;
       top: 45px;
-      right: 177px;
+      right: -24px;
       padding: 15px 0 50px 0;
       height: 100px;
       z-index: 100;
