--- a/client/pages/Timesheet/StatusBar/StatusBar.module.scss
+++ b/client/pages/Timesheet/StatusBar/StatusBar.module.scss
@@ -5,7 +5,7 @@
   .container {
     display: flex;
     flex-direction: row;
-    > div {
+    .message {
       flex-grow: 1;
       flex-basis: 0;
       justify-content: space-evenly;
