--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -1,10 +1,10 @@
 .root {
   flex-grow: 1;
-  justify-content: flex-end;
   display: flex;
 
   .container {
     display: flex;
+    flex-grow: 1;
     justify-content: flex-end;
 
     .toggle {
