--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -1,7 +1,9 @@
 .root {
   width: 100%;
   height: 55px;
-  background: #343a40;
+//   background: #0E1428; // Xiketic
+//   background: #342E37; // Raisin black
+  background: #252422; // Eerie black
 
   .container {
     max-width: 1440px;
