--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -1,4 +1,5 @@
 $menu_height: 115px;
+$menu_width: 200px;
 
 .root {
   flex-grow: 1;
@@ -20,56 +21,50 @@ $menu_height: 115px;
       font-weight: bold;
       cursor: hand;
     }
+  }
+}
 
-    .menu {
-      background-color: #fff;
-      border-radius: 3px;
-      border: 1px solid #ccc;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-      position: relative;
-      top: 45px;
-      right: -24px;
-      padding: 15px 0 50px 0;
-      height: $menu_height;
-      z-index: 100;
+.menu {
+  border-radius: 3px;
+  padding: 15px 0 50px 0;
+  height: $menu_height;
+  width: $menu_width;
+  z-index: 100;
+  overflow: hidden;
 
-      .header {
-        font-size: 15px;
-      }
+  .header {
+    font-size: 15px;
+  }
 
-      .divider {
-        display: block;
-        height: 0;
-        margin: 8px 0;
-        border-top: 1px solid #e1e4e8;
-      }
+  .divider {
+    display: block;
+    height: 0;
+    margin: 8px 0;
+    border-top: 1px solid #e1e4e8;
+  }
 
-      .menuItem {
-        display: block;
-        color: #24292e;
-        font-size: 12px;
-        padding: 4px 8px 4px 16px;
-        letter-spacing: 0.02rem;
-        font-weight: 400;
+  .menuItem {
+    display: block;
+    color: #24292e;
+    font-size: 12px;
+    padding: 4px 8px 4px 16px;
+    letter-spacing: 0.02rem;
+    font-weight: 400;
 
-        &.userName {
-          font-weight: 600;
-        }
-      }
+    &.userName {
+      font-weight: 600;
+    }
+  }
 
-      a.menuItem {
-        color: inherit;
-        text-decoration: none;
+  a.menuItem {
+    color: inherit;
+    text-decoration: none;
 
-        &:hover,
-        &:active,
-        &:focus {
-          color: #fff;
-          text-decoration: none;
-          background-color: #cf5f00;
-          outline: none;
-        }
-      }
+    &:hover {
+      color: #fff;
+      text-decoration: none;
+      background-color: #cf5f00;
+      outline: none;
     }
   }
 }
