--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -14,6 +14,9 @@
     font-size: 14px;
     margin-bottom: 8px;
   }
+  .labels {
+    margin-bottom: 8px;
+  }
   .actions {
     display: flex;
     margin: 10px 0 10px 0;
