Using template for HtmlWebpackPlugin #290

--- a/views/index_template.hbs
+++ b/views/index_template.hbs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <head>
     <title>Did 365</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,3 +12,13 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
 </head>
+
+<body>
+    <main role='main'>
+        <div id="app"></div>
+    </main>
+    <script src="/js/vendors~did365.8b7e2c7e1c8ece634f47.js"></script>
+    <script src="/js/did365.8b7e2c7e1c8ece634f47.js"></script>
+</body>
+
+</html>
