--- a/client/_global.scss
+++ b/client/_global.scss
@@ -1,56 +1,62 @@
 @media screen and (min-width: 960px) {
-  html {
-    overflow-y: scroll;
-  }
+    html {
+        overflow-y: scroll;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    html {
+        overflow: auto;
+    }
 }
 
 body {
-  font-family: "Segoe UI Light", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif;
-  font-size: 100%;
-  margin: 0;
-  padding: 0;
+    font-family: "Segoe UI Light", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto,
+        "Helvetica Neue", sans-serif;
+    font-size: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 a {
-  text-decoration: none;
-  color: #007bff;
+    text-decoration: none;
+    color: #007bff;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 a:visited {
-  color: #007bff;
+    color: #007bff;
 }
 
 h1 {
-  font-size: 3em;
+    font-size: 3em;
 }
 
 h2 {
-  font-size: 2.2em;
+    font-size: 2.2em;
 }
 
 h3 {
-  font-size: 1.8em;
+    font-size: 1.8em;
 }
 
 h4 {
-  font-size: 1.4em;
+    font-size: 1.4em;
 }
 
 h5 {
-  font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 .truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 button:focus {
-  outline: none;
+    outline: none;
 }
