--- a/client/pages/Timesheet/Overview/Overview.module.scss
+++ b/client/pages/Timesheet/Overview/Overview.module.scss
@@ -2,23 +2,25 @@
   .container {
     width: auto;
   }
-}
 
-[class*="ms-DetailsList-headerWrapper"] {
-  display: none;
-}
-[class*="ms-DetailsRow-fields"] {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin: 0 0 15px 0;
-}
+  &.mobile {
+    [class*="ms-DetailsList-headerWrapper"] {
+      display: none;
+    }
+    [class*="ms-DetailsRow-fields"] {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: flex-start;
+      margin: 0 0 15px 0;
+    }
 
-[class*="ms-DetailsRow-cell"] {
-  display: inherit !important;
-  align-items: unset !important;
-  align-self: unset !important;
-  min-height: auto !important;
+    [class*="ms-DetailsRow-cell"] {
+      display: inherit !important;
+      align-items: unset !important;
+      align-self: unset !important;
+      min-height: auto !important;
+    }
+  }
 }
