--- a/client/pages/Timesheet/Overview/ProjectColumn/ProjectColumnTooltip/ProjectColumnTooltip.module.scss
+++ b/client/pages/Timesheet/Overview/ProjectColumn/ProjectColumnTooltip/ProjectColumnTooltip.module.scss
@@ -1,28 +1,11 @@
 .root {
-  width: 100%;
-
-  .content {
-    display: flex;
-    flex-direction: row;
-
-    .subText {
-      font-size: 7pt;
-    }
-
-    .labelIcon {
-      margin: 0 0 0 6px;
-      align-self: center;
-    }
-
-    .clearButton {
-      margin: 0 0 0 4px;
-    }
-  }
-}
-
-.tooltip {
   margin: 0;
   min-width: 200px;
+
+  &.mobile {
+    /**TODO: MOBILE STYLES TEMP FOR KIM **/
+    position: inherit;
+  }
 
   .title {
     font-size: 13pt;
