--- a/client/pages/Admin/Roles/RoleModal/RoleModal.module.scss
+++ b/client/pages/Admin/Roles/RoleModal/RoleModal.module.scss
@@ -15,14 +15,13 @@
     flex-wrap: wrap;
     overflow: hidden;
 
-    .section {
-      margin: 10px 0 0 0;
-      width: 220px;
+    .permissionItem {
+      width: 200px;
+    }
 
-      .title {
-        font-size: 1.1em;
-        margin: 0 0 12px 0;
-      }
+    .saveBtn {
+      width: 100%;
+      margin: 15px 0 0 0;
     }
   }
 }
