--- a/client/pages/Admin/Users/UserFormModal/UserFormModal.module.scss
+++ b/client/pages/Admin/Users/UserFormModal/UserFormModal.module.scss
@@ -7,6 +7,10 @@
     margin: 0 0 12px 0;
   }
 
+  .inputContainer {
+    margin: 8px 0 0 0;
+  }
+
   .saveBtn {
     width: 100%;
     margin: 8px 0 0 0;
