Support for add in RoleModal

--- a/client/pages/Admin/Roles/RoleModal/RoleModal.module.scss
+++ b/client/pages/Admin/Roles/RoleModal/RoleModal.module.scss
@@ -9,14 +9,26 @@
   }
 
   .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
     overflow: hidden;
 
-    .permissionItem {
-      width: 200px;
+    .inputField {
+      margin: 8px 0 8px 0;
+    }
+
+    .subHeader {
+      font-size: 1.2em;
+      margin: 12px 0 12px 0;
+    }
+
+    .permissions {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      overflow: hidden;
+      .permissionItem {
+        width: 200px;
+      }
     }
 
     .saveBtn {
