--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -20,13 +20,13 @@
         @media (min-width: 1200px) {
             max-width: 1140px;
         }
-        
+
         .nav {
             display: flex;
             flex-direction: row;
-            justify-content: space-evenly;
+            justify-content: start;
             width: 500px;
-            padding-left: 0;
+            padding-left: 8px;
             font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
                 Segoe UI Emoji;
 
@@ -34,6 +34,7 @@
                 display: flex;
                 align-items: center;
                 height: 100%;
+                margin: 0 8px;
 
                 .navLink {
                     display: flex;
@@ -42,7 +43,7 @@
                     font-size: 14px;
                     text-decoration: none;
 
-                    .navIcon{
+                    .navIcon {
                         display: none;
                     }
 
@@ -76,8 +77,8 @@
         width: 100%;
         z-index: 100;
         height: 50px;
-        padding-bottom:10px;
-        background-color:  #363533;
+        padding-bottom: 10px;
+        background-color: #363533;
 
 
         .container {
