--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -76,13 +76,13 @@
         bottom: 0px;
         width: 100%;
         z-index: 100;
-        height: 50px;
+        height: 60px;
         padding-bottom: 10px;
         background-color: #363533;
 
 
         .container {
-            padding: 0 2rem;
+            padding: 0 6%;
 
             .nav {
                 display: flex;
@@ -93,6 +93,7 @@
 
                 .navItem {
                     display: flex;
+                    margin: 0;
 
                     .navLink {
                         width: 100%;
@@ -104,8 +105,8 @@
                         .navIcon {
                             display: flex;
                             color: #f1f1f1;
-                            font-size: 18px;
-                            -webkit-font-smoothing: subpixel-antialiased;
+                            font-size: 24px;
+                            -webkit-font-smoothing: antialiased;
                         }
 
                         &.active {
@@ -121,7 +122,7 @@
                 align-self: center;
 
                 img {
-                    height: 20px;
+                    height: 24px;
                 }
             }
         }
