--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -2,69 +2,73 @@ $menu_height: 115px;
 $menu_width: 200px;
 
 .root {
-  flex-grow: 1;
-  display: flex;
-
-  .container {
-    display: flex;
     flex-grow: 1;
-    justify-content: flex-end;
+    display: flex;
 
-    .toggle {
-      display: flex;
-      flex-direction: row;
-      align-self: center;
-      justify-content: space-evenly;
-      color: #ffffff;
-      font-size: 18px;
-      text-decoration: none;
-      font-weight: bold;
-      cursor: hand;
+    .container {
+        display: flex;
+        flex-grow: 1;
+        justify-content: flex-end;
+
+        .toggle {
+            display: flex;
+            flex-direction: row;
+            align-self: center;
+            justify-content: space-evenly;
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: hand;
+
+            .avatar {
+                font-size: 24px;
+                -webkit-font-smoothing: antialiased;
+            }
+        }
     }
-  }
 }
 
 .menu {
-  border-radius: 3px;
-  padding: 15px 0 50px 0;
-  height: $menu_height;
-  width: $menu_width;
-  z-index: 100;
-  overflow: hidden;
+    border-radius: 3px;
+    padding: 15px 0 50px 0;
+    height: $menu_height;
+    width: $menu_width;
+    z-index: 100;
+    overflow: hidden;
 
-  .header {
-    font-size: 15px;
-  }
-
-  .divider {
-    display: block;
-    height: 0;
-    margin: 8px 0;
-    border-top: 1px solid #e1e4e8;
-  }
-
-  .menuItem {
-    display: block;
-    color: #24292e;
-    font-size: 12px;
-    padding: 4px 8px 4px 16px;
-    letter-spacing: 0.02rem;
-    font-weight: 400;
-
-    &.userName {
-      font-weight: 600;
+    .header {
+        font-size: 15px;
     }
-  }
 
-  a.menuItem {
-    color: inherit;
-    text-decoration: none;
-
-    &:hover {
-      color: #fff;
-      text-decoration: none;
-      background-color: #cf5f00;
-      outline: none;
+    .divider {
+        display: block;
+        height: 0;
+        margin: 8px 0;
+        border-top: 1px solid #e1e4e8;
     }
-  }
+
+    .menuItem {
+        display: block;
+        color: #24292e;
+        font-size: 12px;
+        padding: 4px 8px 4px 16px;
+        letter-spacing: 0.02rem;
+        font-weight: 400;
+
+        &.userName {
+            font-weight: 600;
+        }
+    }
+
+    a.menuItem {
+        color: inherit;
+        text-decoration: none;
+
+        &:hover {
+            color: #fff;
+            text-decoration: none;
+            background-color: #cf5f00;
+            outline: none;
+        }
+    }
 }
