Combining time and duration columns for mobile devices

--- a/client/pages/Timesheet/Overview/Overview.module.scss
+++ b/client/pages/Timesheet/Overview/Overview.module.scss
@@ -22,6 +22,7 @@
             align-items: unset !important;
             align-self: unset !important;
             min-height: auto !important;
+            width: auto !important;
         }
 
         [class*="ms-FocusZone"],
