--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -38,10 +38,10 @@
     }
 }
 
-.dark {
+[class*='theme-dark'] {
     background-color: #000000;
 }
 
-.light {
+[class*='theme-light'] {
     background-color: #ffffff;
 }
