Left placement of notification actions/links

--- a/client/components/UserNotifications/UserNotification/UserNotificationMessage.module.scss
+++ b/client/components/UserNotifications/UserNotification/UserNotificationMessage.module.scss
@@ -8,4 +8,9 @@
   .moreLink {
     margin: 0;
   }
+
+  [class*="ms-MessageBar-actions"] {
+    flex-direction: row;
+    padding: 0 0 0 28px;
+  }
 }
