Notifications bell positioned next to user menu toggle

--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -1,140 +1,144 @@
 .root {
-    width: 100%;
-    height: 55px;
-    background: #252422; // Eerie black
+  width: 100%;
+  height: 55px;
+  background: #252422; // Eerie black
 
-    .container {
-        max-width: 1440px;
-        margin: auto;
-        display: flex;
-        height: 100%;
+  .container {
+    max-width: 1440px;
+    margin: auto;
+    display: flex;
+    height: 100%;
 
-        @media (min-width: 576px) {
-            max-width: 540px;
-        }
-
-        @media (min-width: 992px) {
-            max-width: 960px;
-        }
-
-        @media (min-width: 1200px) {
-            max-width: 1140px;
-        }
-
-        .nav {
-            display: flex;
-            flex-direction: row;
-            justify-content: start;
-            width: 500px;
-            padding-left: 8px;
-            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
-                Segoe UI Emoji;
-
-            .navItem {
-                display: flex;
-                align-items: center;
-                height: 100%;
-                margin: 0 8px;
-
-                .navLink {
-                    display: flex;
-                    color: #fff;
-                    font-weight: 500;
-                    font-size: 14px;
-                    text-decoration: none;
-
-                    .navIcon {
-                        display: none;
-                    }
-
-                    &:hover {
-                        color: #bbb;
-                    }
-
-                    &.active {
-                        color: #cf5f00;
-                    }
-                }
-            }
-        }
-
-        .logo {
-            align-self: center;
-
-            img {
-                height: 37px;
-                margin-top: 5px;
-            }
-        }
+    @media (min-width: 576px) {
+      max-width: 540px;
     }
+
+    @media (min-width: 992px) {
+      max-width: 960px;
+    }
+
+    @media (min-width: 1200px) {
+      max-width: 1140px;
+    }
+
+    .nav {
+      display: flex;
+      flex-direction: row;
+      justify-content: start;
+      width: 500px;
+      padding-left: 8px;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
+        Segoe UI Emoji;
+
+      .navItem {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        margin: 0 8px;
+
+        .navLink {
+          display: flex;
+          color: #fff;
+          font-weight: 500;
+          font-size: 14px;
+          text-decoration: none;
+
+          .navIcon {
+            display: none;
+          }
+
+          &:hover {
+            color: #bbb;
+          }
+
+          &.active {
+            color: #cf5f00;
+          }
+        }
+      }
+    }
+
+    .navRight {
+      display: flex;
+      flex-grow: 1;
+      justify-content: flex-end;
+    }
+
+    .logo {
+      align-self: center;
+
+      img {
+        height: 37px;
+        margin-top: 5px;
+      }
+    }
+  }
 }
 
-
 @media (max-width: 600px) {
-    .root {
-        position: fixed;
-        bottom: 0px;
+  .root {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    z-index: 100;
+    height: 60px;
+    padding-bottom: 10px;
+    background-color: #363533;
+
+    .container {
+      padding: 0 6%;
+
+      .nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
         width: 100%;
-        z-index: 100;
-        height: 60px;
-        padding-bottom: 10px;
-        background-color: #363533;
+        padding-left: 0;
 
+        .navItem {
+          display: flex;
+          margin: 0;
 
-        .container {
-            padding: 0 6%;
+          .navLink {
+            width: 100%;
 
-            .nav {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-evenly;
-                width: 100%;
-                padding-left: 0;
-
-                .navItem {
-                    display: flex;
-                    margin: 0;
-
-                    .navLink {
-                        width: 100%;
-
-                        .navText {
-                            display: none;
-                        }
-
-                        .navIcon {
-                            display: flex;
-                            color: #f1f1f1;
-                            font-size: 24px;
-                            -webkit-font-smoothing: antialiased;
-                        }
-
-                        &.active {
-                            .navIcon {
-                                color: #cf5f00;
-                            }
-                        }
-                    }
-                }
+            .navText {
+              display: none;
             }
 
-            .logo {
-                align-self: center;
-
-                img {
-                    height: 24px;
-                }
+            .navIcon {
+              display: flex;
+              color: #f1f1f1;
+              font-size: 24px;
+              -webkit-font-smoothing: antialiased;
             }
+
+            &.active {
+              .navIcon {
+                color: #cf5f00;
+              }
+            }
+          }
         }
+      }
+
+      .logo {
+        align-self: center;
+
+        img {
+          height: 24px;
+        }
+      }
+    }
+  }
+
+  @media (min-width: 601px) {
+    .navIcon {
+      display: none;
     }
 
-    @media (min-width: 601px) {
-        .navIcon {
-            display: none;
-        }
-
-        .navText {
-            display: flex;
-        }
+    .navText {
+      display: flex;
     }
+  }
 }
