Hover effect on navRight items (user menu toggle and alerts toggle) based on https://outlook.office.com/

--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -6,7 +6,11 @@ $menu_width: 200px;
   font-weight: bold;
   cursor: hand;
   line-height: 55px;
-  margin-left: 16px;
+  padding: 0 12px 0 12px;
+
+  &:hover {
+    background-color: #787878;
+  }
 
   .avatar {
     color: #fff;
