Minor adjustment to user menu toggle

--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -2,9 +2,7 @@ $menu_height: 100px;
 $menu_width: 200px;
 
 .root {
-  text-decoration: none;
-  font-weight: bold;
-  cursor: hand;
+  cursor: pointer;
   line-height: 55px;
   padding: 0 12px 0 12px;
 
