--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -39,9 +39,10 @@
 }
 
 [class*='theme-dark'] {
-    background-color: #000000;
+    background-color: #181c1f;
+
 }
 
 [class*='theme-light'] {
-    background-color: #ffffff;
+    background-color: #f1f1fc;
 }
