--- a/client/components/Autocomplete/Autocomplete.module.scss
+++ b/client/components/Autocomplete/Autocomplete.module.scss
@@ -1,16 +1,29 @@
 .callout {
-  margin: 0;
+    margin: 0;
 
-  .suggestionContainer {
-    .suggestion {
-      padding: 4px 16px;
-      font-size: 14px;
-      cursor: pointer;
-      &:hover {
-        background-color: #cf5f00;
-        color: #fff;
-        font-weight: 500;
-      }
+    .suggestionContainer {
+        .suggestion {
+            padding: 4px 16px;
+            font-size: 14px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #cf5f00;
+                color: #fff;
+                font-weight: 500;
+            }
+        }
     }
-  }
+}
+
+[class*='theme-dark'] {
+    .suggestionContainer {
+        .suggestion {
+            &:hover {
+                background-color: #cf5f00;
+                color: #000;
+            }
+        }
+    }
+
 }
