Adjustments to navRight item size

--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -31,6 +31,14 @@
         Segoe UI Emoji;
     }
 
+    .navRight {
+      display: flex;
+      flex-grow: 1;
+      justify-content: flex-end;
+      padding: 0;
+      margin: 0;
+    }
+
     .logo {
       align-self: center;
 
