--- a/client/_global.scss
+++ b/client/_global.scss
@@ -20,7 +20,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #007bff;
+    // color: #007bff;
 }
 
 a:hover {
@@ -28,7 +28,7 @@ a:hover {
 }
 
 a:visited {
-    color: #007bff;
+    // color: #007bff;
 }
 
 h1 {
