Presenting labels in Timesheet view

--- a/client/components/EventList/EventList.module.scss
+++ b/client/components/EventList/EventList.module.scss
@@ -1,3 +1,12 @@
 .root {
   margin-bottom: 100px;
+
+  .titleColumn {
+    display: flex;
+    flex-direction: row;
+
+    .labels {
+      margin: 0 0 0 10px;
+    }
+  }
 }
