--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -1,22 +1,27 @@
 .root {
   display: flex;
   flex-direction: column;
+
   .name {
     font-weight: 500;
     margin-bottom: 0;
   }
+
   .customer {
     color: #787878;
     font-weight: 400;
     margin: 0 0 8px 0;
   }
+
   .description {
     font-size: 14px;
     margin-bottom: 8px;
   }
+
   .labels {
     margin-bottom: 8px;
   }
+
   .actions {
     display: flex;
     margin: 10px 0 10px 0;
@@ -27,6 +32,25 @@
         color: inherit;
         text-decoration: none;
       }
+    }
+  }
+
+  .info {
+    display: flex;
+    flex-direction: row;
+    .left,
+    .right {
+      width: 50%;
+    }
+    .right {
+      flex-direction: row-reverse;
+    }
+  }
+
+  .timeEntries {
+    .title {
+      font-weight: 500;
+      margin-bottom: 0;
     }
   }
 }
