--- a/client/pages/Projects/ProjectDetails/TimeEntries/TimeEntries.module.scss
+++ b/client/pages/Projects/ProjectDetails/TimeEntries/TimeEntries.module.scss
@@ -1,18 +1,42 @@
 .root {
-  .title {
-    font-weight: 500;
-    margin-bottom: 0;
-  }
-
-  .actions {
+  margin: 20px 0 0 0;
+  .row {
     display: flex;
-    margin: 10px 0 10px 0;
-    .buttonContainer {
-      margin: 0 5px 0 0;
+    flex-direction: row;
 
-      a {
-        color: inherit;
-        text-decoration: none;
+    .summary {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      .label {
+        width: 180px;
+        display: inline-block;
+      }
+
+      .value {
+        font-weight: 600;
+      }
+    }
+
+    .actions {
+      width: 50%;
+      display: flex;
+      flex-direction: row-reverse;
+      margin: 10px 0 10px 0;
+      .buttonContainer {
+        margin: 0 5px 0 0;
+
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
       }
     }
   }
