--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -1,22 +1,48 @@
 .root {
   display: flex;
   flex-direction: column;
+
   .name {
     font-weight: 500;
     margin-bottom: 0;
   }
+
   .customer {
     color: #787878;
     font-weight: 400;
     margin: 0 0 8px 0;
   }
+
   .description {
     font-size: 14px;
     margin-bottom: 8px;
   }
+
   .labels {
     margin-bottom: 8px;
   }
+
+  .summary {
+    margin: 0 0 20px 0;
+    display: flex;
+    flex-direction: column;
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .label {
+      width: 180px;
+      display: inline-block;
+    }
+
+    .value {
+      font-weight: 600;
+    }
+  }
+
   .actions {
     display: flex;
     margin: 10px 0 10px 0;
