--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -2,15 +2,30 @@
   display: flex;
   flex-direction: column;
 
-  .name {
-    font-weight: 500;
-    margin-bottom: 0;
-  }
+  .header {
+    display: flex;
+    flex-direction: row;
+    margin: 0 0 15px 0;
 
-  .customer {
-    color: #787878;
-    font-weight: 400;
-    margin: 0 0 8px 0;
+    .icon {
+      font-size: 45px;
+      margin: 0 25px 0 0;
+    }
+
+    .title {
+      .text {
+        font-size: 28px;
+        font-weight: 500;
+        margin-bottom: 0;
+      }
+
+      .subText {
+        font-size: 19px;
+        color: #787878;
+        font-weight: 400;
+        margin: 0 0 8px 0;
+      }
+    }
   }
 
   .description {
