--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -8,6 +8,7 @@
     margin: 0 0 15px 0;
 
     .icon {
+      color: #787878;
       font-size: 45px;
       margin: 0 25px 0 0;
     }
@@ -30,7 +31,7 @@
 
   .description {
     font-size: 14px;
-    margin-bottom: 8px;
+    margin-bottom: 12px 0 12px 0;
   }
 
   .labels {
