Fixed ProjectDetails styles

--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -31,11 +31,11 @@
 
   .description {
     font-size: 14px;
-    margin-bottom: 12px 0 12px 0;
+    margin: 12px 0 12px 0;
   }
 
   .labels {
-    margin-bottom: 8px;
+    margin: 0 0 8px 0;
   }
 
   .summary {
