--- a/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
+++ b/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
@@ -1,12 +1,12 @@
 .root {
   max-width: 450px;
   .inputField {
-    margin-top: 12;
+    margin-top: 14px;
     width: 100%;
     border-radius: 3px;
   }
   .iconPicker {
-    margin-top: 12;
+    margin-top: 14px;
     width: 300px;
   }
 }
