--- a/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
+++ b/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
@@ -1,12 +1,14 @@
 .root {
   max-width: 450px;
-  .inputField {
-    margin-top: 14px;
+
+  .inputElement {
+    margin: 14px 0 0 0;
     width: 100%;
     border-radius: 3px;
   }
+
   .iconPicker {
-    margin-top: 14px;
+    margin: 14px 0 0 0;
     width: 100%;
     max-width: 300px;
   }
