--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -14,4 +14,9 @@
         font-size: 14px;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
     }
+
+    .charts {
+        display: flex;
+        flex-direction: row;
+    }
 }
