--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -16,7 +16,16 @@
     }
 
     .charts {
+        margin: 20px 0 0 0;
         display: flex;
         flex-direction: row;
+
+        .title {
+            text-shadow: 0px 1px 1px #4d4d4d;
+            letter-spacing: 0.15rem;
+            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+            font-size: 12px;
+            text-align: center;
+        }
     }
 }
