--- a/client/pages/Admin/ApiTokens/ApiTokens.module.scss
+++ b/client/pages/Admin/ApiTokens/ApiTokens.module.scss
@@ -1,4 +1,12 @@
 .root {
+  .form {
+    display: flex;
+
+    >div {
+      margin-right: 12px;
+    }
+  }
+
   .message {
     margin: 10px 0 0 0;
   }
