--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -41,11 +41,13 @@
 
     .logo {
       align-self: center;
-
-      img {
-        height: 37px;
-        margin-top: 5px;
-      }
+      text-shadow: 0px 1px 1px #4d4d4d;
+      letter-spacing: 0.15rem;
+      font-size: 18px;
+      color: #fff;
+      font-weight: bold;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+        sans-serif, Apple Color Emoji, Segoe UI Emoji;
     }
   }
 }
