--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -1,17 +1,24 @@
 .root {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
-    .logo {
-        width: 175px;
-    }
+  .logo {
+    text-shadow: 0px 1px 1px #4d4d4d;
+    letter-spacing: 0.15rem;
+    font-size: 44px;
+    color: #cf5f00;
+    letter-spacing: 3px;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+      sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  }
 
-    .motto {
-        text-shadow: 0px 1px 1px #4d4d4d;
-        letter-spacing: 0.15rem;
-        font-style: italic;
-        font-size: 14px;
-        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-    }
+  .motto {
+    text-shadow: 0px 1px 1px #4d4d4d;
+    letter-spacing: 0.15rem;
+    font-style: italic;
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+      sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  }
 }
