--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -1,7 +1,8 @@
 .root {
   width: 100%;
   height: 55px;
-  background: #252422; // Eerie black
+  padding: 5px 0 0 0;
+  background: #252422;
 
   .container {
     max-width: 1440px;
@@ -74,10 +75,6 @@
 
     .logo {
       align-self: center;
-
-      img {
-        height: 24px;
-      }
     }
   }
 }
