--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -4,20 +4,18 @@
   flex-direction: column;
 
   .logo {
-    text-shadow: 0px 1px 1px #4d4d4d;
     letter-spacing: 0.15rem;
     font-size: 44px;
-    color: #cf5f00;
-    letter-spacing: 3px;
+    color: #252422;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
       sans-serif, Apple Color Emoji, Segoe UI Emoji;
   }
 
   .motto {
-    text-shadow: 0px 1px 1px #4d4d4d;
     letter-spacing: 0.15rem;
     font-style: italic;
     font-size: 14px;
+    color: #cf5f00;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
       sans-serif, Apple Color Emoji, Segoe UI Emoji;
   }
