Support for xsmall entity labels

--- a/client/components/EntityLabel/EntityLabel.module.scss
+++ b/client/components/EntityLabel/EntityLabel.module.scss
@@ -7,6 +7,11 @@
   border-radius: 3px;
   transition: opacity 0.2s linear;
 
+  &.sizeXSmall {
+    padding: 2px 6px;
+    font-size: 0.7em;
+  }
+
   &.sizeMedium {
     padding: 6px 10px;
     font-size: 1.0em;
