--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -5,17 +5,16 @@
 
   .logo {
     letter-spacing: 0.35rem;
-    font-size: 44px;
+    font-size: 45px;
     color: #252422;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
       sans-serif, Apple Color Emoji, Segoe UI Emoji;
   }
 
   .motto {
-    background-color: #252422;
     letter-spacing: 0.25rem;
     font-size: 12px;
-    color: #fff;
+    color: #252422;
     padding: 8px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
       sans-serif, Apple Color Emoji, Segoe UI Emoji;
