--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -5,8 +5,10 @@
 
   .logo {
     letter-spacing: 0.35rem;
-    font-size: 45px;
-    color: #252422;
+    font-size: 65px;
+    padding: 0.15rem 0.25rem 0.25rem 0.45rem;
+    background-color: #252422;
+    color: #fff;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
       sans-serif, Apple Color Emoji, Segoe UI Emoji;
   }
