--- a/client/pages/Timesheet/Overview/ProjectColumn/ProjectColumn.module.scss
+++ b/client/pages/Timesheet/Overview/ProjectColumn/ProjectColumn.module.scss
@@ -1,5 +1,5 @@
 .root {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: row;
 
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: row;
     padding: 0 0 0 8px;
+    flex-grow: 1 1 1 1;
 
     .labelIcon {
       margin: 0 0 0 6px;
