--- a/client/pages/Timesheet/Overview/CustomerColumn/CustomerColumn.module.scss
+++ b/client/pages/Timesheet/Overview/CustomerColumn/CustomerColumn.module.scss
@@ -3,6 +3,7 @@
   word-break: normal;
   display: flex;
   flex-direction: row;
+  padding: 4px 0 4px 0;
 
   .iconContainer {
     padding: 4px 0 0 0;
