--- a/client/pages/Customers/CustomerDetails/CustomerDetails.module.scss
+++ b/client/pages/Customers/CustomerDetails/CustomerDetails.module.scss
@@ -1,23 +1,44 @@
 .root {
   display: flex;
   flex-direction: column;
-  .name {
-    font-weight: 500;
-    margin-bottom: 8px;
-  }
-  .description {
-    font-size: 14px;
-  }
-  .actions {
-    display: flex;
-    margin: 10px 0 10px 0;
-    .buttonContainer {
-      margin: 0 5px 0 0;
 
-      a {
-        color: inherit;
-        text-decoration: none;
+  .header {
+    display: flex;
+    flex-direction: row;
+    margin: 0 0 15px 0;
+
+    .iconContainer {
+      color: #787878;
+      font-size: 45px;
+      margin: 0 25px 0 0;
+    }
+
+    .title {
+      flex: 1 1 0;
+
+      .text {
+        font-size: 28px;
+        font-weight: 500;
+        margin-bottom: 0;
       }
     }
+
+    .actions {
+      margin: 6px 15px 0 8px;
+      display: flex;
+
+      .buttonContainer {
+        margin: 0 5px 0 0;
+
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  .description {
+    font-size: 14px;
   }
 }
