Fix for createRole mutation

--- a/client/pages/Admin/Roles/RolePanel/RolePanel.module.scss
+++ b/client/pages/Admin/Roles/RolePanel/RolePanel.module.scss
@@ -18,7 +18,7 @@
       flex-wrap: wrap;
       overflow: hidden;
       .permissionItem {
-        width: 200px;
+        width: auto;
       }
     }
 
