LabelForm changed from Modal to Panel

--- a/client/pages/Admin/Labels/LabelForm/LabelForm.module.scss
+++ b/client/pages/Admin/Labels/LabelForm/LabelForm.module.scss
@@ -1,16 +1,17 @@
 .root {
   padding: 20px;
-  min-width: 450px;
 
-  .title {
-    font-size: 1.6em;
-    margin: 0 0 12px 0;
+  .inputElement {
+    margin: 14px 0 0 0;
+    width: 100%;
+    border-radius: 3px;
   }
 
   .saveBtn {
     width: 100%;
     margin: 8px 0 0 0;
   }
+  
 
   .colorPicker {
     position: relative;
