IconPicker showIcons=true

--- a/client/pages/Customers/CustomerForm/CreateCustomerForm.module.scss
+++ b/client/pages/Customers/CustomerForm/CreateCustomerForm.module.scss
@@ -1,11 +1,7 @@
 .root {
   .inputField {
-    margin-top: 12;
+    margin-top: 12px;
     width: 450px;
     border-radius: 3px;
-  }
-  .iconPicker {
-    margin-top: 12;
-    width: 300px;
   }
 }
