Refetching after updating a project

--- a/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
+++ b/client/pages/Projects/ProjectDetails/ProjectDetails.module.scss
@@ -34,7 +34,7 @@
             display: flex;
             margin: 6px 15px 0 8px;
     
-            .buttonContainer {
+            .actionItem {
                 margin: 0 5px 0 0;
     
                 a {
