logged out user menu styles

--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -25,6 +25,10 @@
     z-index: 100;
     overflow: hidden;
 
+    &.loggedout{
+        padding-top: 0;
+    }
+
     .header {
         font-size: 15px;
     }
