--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -12,6 +12,8 @@
         color: #ffffff;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
             sans-serif, Apple Color Emoji, Segoe UI Emoji;
+        font-weight: 600;
+        -webkit-font-smoothing:subpixel-antialiased;
     }
 
     .motto {
