Reports using Pivot, and added Forecast tab

--- a/client/pages/Reports/Reports.module.scss
+++ b/client/pages/Reports/Reports.module.scss
@@ -1,5 +1,9 @@
 .root {
-  .spinner {
-    margin: 10px;
+  .container {
+    margin: 8px 0 0 0;
+
+    .spinner {
+      margin: 10px;
+    }
   }
 }
