--- a/views/index_template.hbs
+++ b/views/index_template.hbs
@@ -16,7 +16,7 @@
 
 <body>
     <main role='main'>
-        <div id="app"></div>
+        <div id="app" data-error='{{error}}'></div>
     </main>
 </body>
 
